# FileTrace

./: README.md
FileTrace-android/: build.gradle  settings.gradle
FileTrace-android/app/: build.gradle
FileTrace-android/app/src/androidTest/java/wbq/ndkdemo/: ExampleInstrumentedTest.kt
FileTrace-android/app/src/main/: AndroidManifest.xml
FileTrace-android/app/src/main/java/wbq/ndkdemo/: MainActivity.kt
FileTrace-android/app/src/main/java/wbq/ndkdemo/a/: A.kt  B.kt
FileTrace-android/app/src/main/res/animator/: rotation.xml
FileTrace-android/app/src/main/res/drawable/: animatorvectordrawable.xml  vectordrawable.xml
FileTrace-android/app/src/main/res/layout/: activity_main.xml
FileTrace-android/app/src/main/res/values/: strings.xml
FileTrace-android/app/src/test/java/wbq/ndkdemo/: ExampleUnitTest.kt
FileTrace-android/fileTrace/: build.gradle
FileTrace-android/fileTrace/src/main/: AndroidManifest.xml
FileTrace-android/fileTrace/src/main/cpp/: CMakeLists.txt  filetrace-ctg.cpp  logs.h  unzipHelper.cpp  unzipHelper.h  zipHelper.cpp  zipHelper.h
FileTrace-android/fileTrace/src/main/cpp/LibPng/: pngrutil.c
FileTrace-android/fileTrace/src/main/cpp/PDFWriter/: CMakeLists.txt
FileTrace-android/fileTrace/src/main/cpp/ZLib/: CMakeLists.txt  ioapi.c  miniunz.c  miniunz.h  minizip.c  minizip.h
FileTrace-android/fileTrace/src/main/java/com/ctg/filetrace/: FileTrace.kt  FileTraceApi.kt  SupportFileType.kt  TagAccessor.kt  TagAccessorFactory.kt
FileTrace-android/fileTrace/src/main/java/com/ctg/filetrace/impl/: OfficeXImpl.kt  ZipImpl.kt
FileTrace-android/fileTrace/src/main/java/com/ctg/filetrace/util/: Base64.java  DesEncryptor.kt  EasyExt.kt  FileExt.kt  FileUtils.kt  Logger.kt  XmlProcessor.kt  ZipUtils.kt
FileTrace-android/gradle/wrapper/: gradle-wrapper.properties
FileTrace-android/javaLib/: build.gradle
FileTrace-android/javaLib/src/main/java/com/secure/core/bgs/: BgsProxy.java
FileTracer-ios/filetrace/filetrace-lib/: CMakeLists.txt  fileTrace.cpp  fileTrace.h
FileTracer-ios/filetrace/filetrace-lib/ZLib/: CMakeLists.txt  gun.c  gun.h  minizip.c  minizip.h
FileTracer-ios/filetrace/filetrace-lib/Zip/: CMakeLists.txt
PDF-Writer/PDFWriter/: DescendentFontWriter.h  FreeTypeFaceWrapper.h
ios-cmake/example/example-app/example-app.xcodeproj/: project.pbxproj
